# testingbotclient

./: .travis.yml  LICENSE  LICENSE.txt  MANIFEST  README.md  example.py  pyproject.toml  setup.py  test_client.py  test_travis.py  testingbotclient.py
.github/workflows/: build.yml  codeql-analysis.yml  test.yml
tests/: test_client.py  test_unit.py
